[gd_scene load_steps=3 format=3 uid="uid://bb1lmjt284vec"]

[ext_resource type="Script" uid="uid://1x6gkx4fvo8n" path="res://scripts/ui/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="LabelSettings" uid="uid://crqyb5auexjsb" path="res://fonts/pause_button_font_config.tres" id="2_f6eus"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_0lmf7")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.12, 16.72)
color = Color(0, 0, 0, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -172.0
offset_right = 185.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Botao2" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(390, 170)
layout_mode = 2
color = Color(0.345098, 0.0980392, 0.196078, 1)

[node name="BotaoBack" type="ColorRect" parent="VBoxContainer/Botao2"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 375.0
offset_bottom = 155.0
color = Color(0.792157, 0.501961, 0.4, 1)

[node name="ResumeText" type="Label" parent="VBoxContainer/Botao2/BotaoBack"]
layout_mode = 0
offset_left = 25.0
offset_top = 30.0
offset_right = 367.0
offset_bottom = 153.0
text = "Resume"
label_settings = ExtResource("2_f6eus")

[node name="BotaoResume" type="Button" parent="VBoxContainer/Botao2/BotaoBack/ResumeText"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -156.0
offset_right = 166.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
flat = true

[node name="Botao3" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(370, 170)
layout_mode = 2
color = Color(0.345098, 0.0980392, 0.196078, 1)

[node name="BotaoBack" type="ColorRect" parent="VBoxContainer/Botao3"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 375.0
offset_bottom = 155.0
color = Color(0.792157, 0.501961, 0.4, 1)

[node name="BackToMenu" type="Label" parent="VBoxContainer/Botao3/BotaoBack"]
layout_mode = 0
offset_left = 16.0
offset_top = -10.0
offset_right = 366.0
offset_bottom = 254.0
text = "Back to Menu"
label_settings = ExtResource("2_f6eus")
horizontal_alignment = 1
autowrap_mode = 2

[node name="BotaoBackToMenu" type="Button" parent="VBoxContainer/Botao3/BotaoBack/BackToMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -177.0
offset_top = -251.0
offset_right = 173.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
flat = true

[connection signal="pressed" from="VBoxContainer/Botao2/BotaoBack/ResumeText/BotaoResume" to="." method="_on_botao_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Botao3/BotaoBack/BackToMenu/BotaoBackToMenu" to="." method="_on_botao_back_to_menu_pressed"]
